feat: update skill to current version (expert profiles, team mode, references)